# Deberta-finetune

./: .gitignore  README.md  download_data.py  download_hf_model.py  download_mlm.py  evaluate_b_tests.py  main.py  main_task1_binary.py  main_task2_category.py  pyproject.toml  upload_best_safetensors.py
definitions/: task2_definitions.py  task2_old_definitions.py  task2_patch.md
